// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comments > comment 1`] = `
{
  "children": [],
  "name": "number",
  "value": 123,
}
`;

exports[`comments > comment block 1`] = `
{
  "children": [],
  "name": "number",
  "value": 123,
}
`;

exports[`examples > procedural > fibonacci 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "fib",
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "n",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "name",
                                  "value": "n",
                                },
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 2,
                                },
                              ],
                              "name": "operator",
                              "value": "<",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 1,
                                },
                                {
                                  "children": [],
                                  "name": "placeholder",
                                },
                              ],
                              "name": "operator",
                              "value": ";",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "name": "name",
                                      "value": "fib",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "name": "name",
                                              "value": "n",
                                            },
                                            {
                                              "children": [],
                                              "name": "number",
                                              "value": 1,
                                            },
                                          ],
                                          "name": "operator",
                                          "value": "-",
                                        },
                                      ],
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "name": "operator",
                                  "value": "application",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "name": "name",
                                      "value": "fib",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "name": "name",
                                              "value": "n",
                                            },
                                            {
                                              "children": [],
                                              "name": "number",
                                              "value": 2,
                                            },
                                          ],
                                          "name": "operator",
                                          "value": "-",
                                        },
                                      ],
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "name": "operator",
                                  "value": "application",
                                },
                              ],
                              "name": "operator",
                              "value": "+",
                            },
                          ],
                          "name": "operator",
                          "value": "ifElse",
                        },
                        {
                          "children": [],
                          "name": "placeholder",
                        },
                      ],
                      "name": "operator",
                      "value": ";",
                    },
                  ],
                  "name": "group",
                  "value": "braces",
                },
              ],
              "name": "operator",
              "value": "->",
            },
          ],
          "name": "operator",
          "value": ":=",
        },
      ],
      "name": "operator",
      "value": "export",
    },
  ],
  "name": "program",
}
`;

exports[`examples > procedural > hello world 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "println",
            },
          ],
          "name": "operator",
          "value": "external",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "args",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "name",
                              "value": "println",
                            },
                            {
                              "children": [],
                              "name": "string",
                              "value": "Hello, World!",
                            },
                          ],
                          "name": "operator",
                          "value": "application",
                        },
                        {
                          "children": [],
                          "name": "placeholder",
                        },
                      ],
                      "name": "operator",
                      "value": ";",
                    },
                  ],
                  "name": "group",
                  "value": "braces",
                },
              ],
              "name": "operator",
              "value": "->",
            },
          ],
          "name": "operator",
          "value": "export",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "program",
}
`;

exports[`expressions > arithmetics > add 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > arithmetics > decrement 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "prefixDecrement",
}
`;

exports[`expressions > arithmetics > divide 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "/",
}
`;

exports[`expressions > arithmetics > increment 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "prefixIncrement",
}
`;

exports[`expressions > arithmetics > modulo 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "%",
}
`;

exports[`expressions > arithmetics > multiply 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "*",
}
`;

exports[`expressions > arithmetics > negate 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "negate",
}
`;

exports[`expressions > arithmetics > postfix decrement 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "postfixDecrement",
}
`;

exports[`expressions > arithmetics > postfix increment 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "postfixIncrement",
}
`;

exports[`expressions > arithmetics > power 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "^",
}
`;

exports[`expressions > arithmetics > produces correct tree for '(2^2-5+7)-(-i)+ (j)/0 - 1*(1*f)+(27-x )/q + send(-(2+7)/A,j, i, 127.0 ) + 1/1' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "name": "number",
                                          "value": 2,
                                        },
                                        {
                                          "children": [],
                                          "name": "number",
                                          "value": 2,
                                        },
                                      ],
                                      "name": "operator",
                                      "value": "^",
                                    },
                                    {
                                      "children": [],
                                      "name": "number",
                                      "value": 5,
                                    },
                                  ],
                                  "name": "operator",
                                  "value": "-",
                                },
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 7,
                                },
                              ],
                              "name": "operator",
                              "value": "+",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "name",
                                  "value": "i",
                                },
                              ],
                              "name": "operator",
                              "value": "negate",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                      ],
                      "name": "operator",
                      "value": "-",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "name",
                              "value": "j",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                        {
                          "children": [],
                          "name": "number",
                          "value": 0,
                        },
                      ],
                      "name": "operator",
                      "value": "/",
                    },
                  ],
                  "name": "operator",
                  "value": "+",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "number",
                              "value": 1,
                            },
                            {
                              "children": [],
                              "name": "name",
                              "value": "f",
                            },
                          ],
                          "name": "operator",
                          "value": "*",
                        },
                      ],
                      "name": "group",
                      "value": "parens",
                    },
                  ],
                  "name": "operator",
                  "value": "*",
                },
              ],
              "name": "operator",
              "value": "-",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "number",
                          "value": 27,
                        },
                        {
                          "children": [],
                          "name": "name",
                          "value": "x",
                        },
                      ],
                      "name": "operator",
                      "value": "-",
                    },
                  ],
                  "name": "group",
                  "value": "parens",
                },
                {
                  "children": [],
                  "name": "name",
                  "value": "q",
                },
              ],
              "name": "operator",
              "value": "/",
            },
          ],
          "name": "operator",
          "value": "+",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "send",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "name": "number",
                                              "value": 2,
                                            },
                                            {
                                              "children": [],
                                              "name": "number",
                                              "value": 7,
                                            },
                                          ],
                                          "name": "operator",
                                          "value": "+",
                                        },
                                      ],
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "name": "operator",
                                  "value": "negate",
                                },
                                {
                                  "children": [],
                                  "name": "name",
                                  "value": "A",
                                },
                              ],
                              "name": "operator",
                              "value": "/",
                            },
                            {
                              "children": [],
                              "name": "name",
                              "value": "j",
                            },
                          ],
                          "name": "operator",
                          "value": ",",
                        },
                        {
                          "children": [],
                          "name": "name",
                          "value": "i",
                        },
                      ],
                      "name": "operator",
                      "value": ",",
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 127,
                    },
                  ],
                  "name": "operator",
                  "value": ",",
                },
              ],
              "name": "group",
              "value": "parens",
            },
          ],
          "name": "operator",
          "value": "application",
        },
      ],
      "name": "operator",
      "value": "+",
    },
    {
      "children": [
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "/",
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > arithmetics > produces correct tree for '++i' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "i",
    },
  ],
  "name": "operator",
  "value": "prefixIncrement",
}
`;

exports[`expressions > arithmetics > produces correct tree for '-(a+b)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "negate",
}
`;

exports[`expressions > arithmetics > produces correct tree for '--i' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "i",
    },
  ],
  "name": "operator",
  "value": "prefixDecrement",
}
`;

exports[`expressions > arithmetics > produces correct tree for '1 + 2^3 * 4' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 1,
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": "^",
        },
        {
          "children": [],
          "name": "number",
          "value": 4,
        },
      ],
      "name": "operator",
      "value": "*",
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > arithmetics > subtract 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "-",
}
`;

exports[`expressions > boolean expressions > and 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "and",
}
`;

exports[`expressions > boolean expressions > comparators > comparator < 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "<",
}
`;

exports[`expressions > boolean expressions > comparators > comparator <= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "<=",
}
`;

exports[`expressions > boolean expressions > comparators > comparator > 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": ">",
}
`;

exports[`expressions > boolean expressions > comparators > comparator >= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": ">=",
}
`;

exports[`expressions > boolean expressions > comparators > range < < 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_<_<",
}
`;

exports[`expressions > boolean expressions > comparators > range < <= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_<_<=",
}
`;

exports[`expressions > boolean expressions > comparators > range <= < 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_<=_<",
}
`;

exports[`expressions > boolean expressions > comparators > range <= <= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_<=_<=",
}
`;

exports[`expressions > boolean expressions > comparators > range > > 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_>_>",
}
`;

exports[`expressions > boolean expressions > comparators > range > >= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_>_>=",
}
`;

exports[`expressions > boolean expressions > comparators > range >= > 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_>=_>",
}
`;

exports[`expressions > boolean expressions > comparators > range >= >= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "inRange_>=_>=",
}
`;

exports[`expressions > boolean expressions > deep equal 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "===",
}
`;

exports[`expressions > boolean expressions > deep not equal 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "!==",
}
`;

exports[`expressions > boolean expressions > equal 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "==",
}
`;

exports[`expressions > boolean expressions > in 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "in",
}
`;

exports[`expressions > boolean expressions > is 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > boolean expressions > not 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "!",
}
`;

exports[`expressions > boolean expressions > not equal 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "!=",
}
`;

exports[`expressions > boolean expressions > or 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "or",
}
`;

exports[`expressions > data structures > field access 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "operator",
  "value": "access",
}
`;

exports[`expressions > data structures > field access dynamic 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "operator",
  "value": "accessDynamic",
}
`;

exports[`expressions > data structures > map 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": "label",
        },
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "name": "number",
              "value": 4,
            },
          ],
          "name": "operator",
          "value": "label",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "map",
}
`;

exports[`expressions > data structures > produces correct tree for '(-(2+7)/A,j, i, 127.0 )' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 2,
                                },
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 7,
                                },
                              ],
                              "name": "operator",
                              "value": "+",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                      ],
                      "name": "operator",
                      "value": "negate",
                    },
                    {
                      "children": [],
                      "name": "name",
                      "value": "A",
                    },
                  ],
                  "name": "operator",
                  "value": "/",
                },
                {
                  "children": [],
                  "name": "name",
                  "value": "j",
                },
              ],
              "name": "operator",
              "value": ",",
            },
            {
              "children": [],
              "name": "name",
              "value": "i",
            },
          ],
          "name": "operator",
          "value": ",",
        },
        {
          "children": [],
          "name": "number",
          "value": 127,
        },
      ],
      "name": "operator",
      "value": ",",
    },
  ],
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > data structures > record 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": "label",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": "label",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "record",
}
`;

exports[`expressions > data structures > set 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "name": "number",
          "value": 2,
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "set",
}
`;

exports[`expressions > data structures > symbol 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "symbol",
}
`;

exports[`expressions > data structures > tuple 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 1,
    },
    {
      "children": [],
      "name": "number",
      "value": 2,
    },
  ],
  "name": "operator",
  "value": ",",
}
`;

exports[`expressions > data structures > unit 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
  ],
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > fixity expressions > group 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 1,
    },
  ],
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > fixity expressions > infix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > fixity expressions > mixfix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
    {
      "children": [],
      "name": "number",
      "value": 789,
    },
  ],
  "name": "operator",
  "value": "inRange_<_<",
}
`;

exports[`expressions > fixity expressions > name 1`] = `
{
  "children": [],
  "name": "name",
  "value": "name",
}
`;

exports[`expressions > fixity expressions > postfix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "postfixDecrement",
}
`;

exports[`expressions > fixity expressions > prefix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "negate",
}
`;

exports[`expressions > function expressions > application > function call 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "f",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > function call multiple args 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "f",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "operator",
      "value": "application",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send 1 2)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "send",
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 1,
                },
              ],
              "name": "operator",
              "value": "application",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": "application",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send 1)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "send",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": "application",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'a + send (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "a",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "number",
                  "value": 2,
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 3,
                },
              ],
              "name": "operator",
              "value": ",",
            },
          ],
          "name": "group",
          "value": "parens",
        },
      ],
      "name": "operator",
      "value": "application",
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'a + send 1 + 2' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "send",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": "application",
        },
      ],
      "name": "operator",
      "value": "+",
    },
    {
      "children": [],
      "name": "number",
      "value": 2,
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send 1 (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send 1 + 2' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "application",
    },
    {
      "children": [],
      "name": "number",
      "value": 2,
    },
  ],
  "name": "operator",
  "value": "+",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send a (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "name": "name",
          "value": "a",
        },
      ],
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send((1+2), 3)' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 2,
                    },
                  ],
                  "name": "operator",
                  "value": "+",
                },
              ],
              "name": "group",
              "value": "parens",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "send",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "send",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "application",
}
`;

exports[`expressions > function expressions > funciton multiple params 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "operator",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "operator",
      "value": "+",
    },
  ],
  "name": "operator",
  "value": "fn",
}
`;

exports[`expressions > function expressions > function 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > pattern matching > binding visible in scope where it is true 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "a",
                },
                {
                  "children": [],
                  "name": "name",
                  "value": "b",
                },
              ],
              "name": "operator",
              "value": ",",
            },
          ],
          "name": "group",
          "value": "parens",
        },
      ],
      "name": "operator",
      "value": "is",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "operator",
      "value": "==",
    },
  ],
  "name": "operator",
  "value": "and",
}
`;

exports[`expressions > pattern matching > in function parameters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "operator",
      "value": "+",
    },
  ],
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > pattern matching > match 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": "->",
        },
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "name": "number",
              "value": 4,
            },
          ],
          "name": "operator",
          "value": "->",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "match",
}
`;

exports[`expressions > pattern matching > match newline inside 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": "->",
        },
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "name": "number",
              "value": 4,
            },
          ],
          "name": "operator",
          "value": "->",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "match",
}
`;

exports[`expressions > pattern matching > with 'is' operator 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with placeholder 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with rest value 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "b",
                },
              ],
              "name": "operator",
              "value": "...",
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with rest value first 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "b",
                },
              ],
              "name": "operator",
              "value": "...",
            },
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > pattern matching > with variable value 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "a",
                },
              ],
              "name": "operator",
              "value": "#",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "operator",
  "value": "is",
}
`;

exports[`expressions > structured programming > block 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block mutable variable declaration 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
          ],
          "name": "operator",
          "value": "mut",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": ":=",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block pattern matching 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
            {
              "children": [],
              "name": "number",
              "value": 456,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "operator",
      "value": "=",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block variable assignment 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": "=",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block variable declaration 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": ":=",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > expression-label 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
        {
          "children": [],
          "name": "number",
          "value": 456,
        },
      ],
      "name": "operator",
      "value": "+",
    },
    {
      "children": [],
      "name": "number",
      "value": 789,
    },
  ],
  "name": "operator",
  "value": "label",
}
`;

exports[`expressions > structured programming > for loop 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "number",
                  "value": 1,
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 2,
                },
              ],
              "name": "operator",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "brackets",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "for",
}
`;

exports[`expressions > structured programming > for loop newline 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "number",
                  "value": 1,
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 2,
                },
              ],
              "name": "operator",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "group",
      "value": "brackets",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "for",
}
`;

exports[`expressions > structured programming > if-then 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "if",
}
`;

exports[`expressions > structured programming > if-then newline 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "if",
}
`;

exports[`expressions > structured programming > if-then newline-else 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > if-then newline-else newline 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > if-then-else 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > if-then-elseif-then-else 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "false",
        },
        {
          "children": [],
          "name": "number",
          "value": 789,
        },
        {
          "children": [],
          "name": "number",
          "value": 456,
        },
      ],
      "name": "operator",
      "value": "ifElse",
    },
  ],
  "name": "operator",
  "value": "ifElse",
}
`;

exports[`expressions > structured programming > labeled expression 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "label",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "label",
}
`;

exports[`expressions > structured programming > return 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "placeholder",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
          ],
          "name": "operator",
          "value": "return",
        },
      ],
      "name": "group",
      "value": "braces",
    },
  ],
  "name": "operator",
  "value": "->",
}
`;

exports[`expressions > structured programming > while loop 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop break 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "name": "placeholder",
        },
      ],
      "name": "operator",
      "value": "break",
    },
  ],
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop break value 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "break",
    },
  ],
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop continue 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "name": "placeholder",
        },
      ],
      "name": "operator",
      "value": "continue",
    },
  ],
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > structured programming > while loop continue value 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "true",
    },
    {
      "children": [
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "continue",
    },
  ],
  "name": "operator",
  "value": "while",
}
`;

exports[`expressions > values > false 1`] = `
{
  "children": [],
  "name": "name",
  "value": "false",
}
`;

exports[`expressions > values > number 1`] = `
{
  "children": [],
  "name": "number",
  "value": 123,
}
`;

exports[`expressions > values > string 1`] = `
{
  "children": [],
  "name": "string",
  "value": "string",
}
`;

exports[`expressions > values > true 1`] = `
{
  "children": [],
  "name": "name",
  "value": "true",
}
`;

exports[`newline handling > block newline at the beginning 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block newline at the end 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "b",
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 2,
                },
              ],
              "name": "operator",
              "value": ":=",
            },
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "operator",
          "value": ";",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block newline in the middle 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block semicolon newline 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`newline handling > block semicolon newline at the end 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "operator",
          "value": ":=",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "name",
                  "value": "b",
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 2,
                },
              ],
              "name": "operator",
              "value": ":=",
            },
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "operator",
          "value": ";",
        },
      ],
      "name": "operator",
      "value": ";",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`programs > module > export main 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "args",
        },
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "group",
          "value": "braces",
        },
      ],
      "name": "operator",
      "value": "->",
    },
  ],
  "name": "operator",
  "value": "export",
}
`;

exports[`programs > module > external 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "operator",
  "value": "external",
}
`;

exports[`programs > module > import 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
  ],
  "name": "operator",
  "value": "import",
}
`;

exports[`programs > module > import with 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
    {
      "children": [],
      "name": "name",
      "value": "c",
    },
  ],
  "name": "operator",
  "value": "importWith",
}
`;

exports[`programs > module > import with external 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "c",
        },
      ],
      "name": "operator",
      "value": "external",
    },
  ],
  "name": "operator",
  "value": "importWith",
}
`;

exports[`programs > module > operator 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "operator",
      "value": "operator",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "operator",
      "value": "fn",
    },
  ],
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > operator with precedence 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "operator",
          "value": "+",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "operatorPrecedence",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "operator",
      "value": "fn",
    },
  ],
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > operator with tuple precedence 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "operator",
          "value": "+",
        },
        {
          "children": [
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "operator",
          "value": ",",
        },
      ],
      "name": "operator",
      "value": "operatorPrecedence",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "operator",
      "value": "fn",
    },
  ],
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > private declare 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "z",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "operator",
      "value": "+",
    },
  ],
  "name": "operator",
  "value": ":=",
}
`;

exports[`programs > module > public declare 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "z",
            },
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
          ],
          "name": "operator",
          "value": "+",
        },
      ],
      "name": "operator",
      "value": ":=",
    },
  ],
  "name": "operator",
  "value": "export",
}
`;

exports[`programs > script > export 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "export",
}
`;

exports[`programs > script > export as 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "operator",
  "value": "exportAs",
}
`;

exports[`programs > script > use 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
  ],
  "name": "operator",
  "value": "use",
}
`;

exports[`programs > script > use with 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "string",
      "value": "a",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "operator",
  "value": "useWith",
}
`;

exports[`programs > script > variable export 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "operator",
      "value": "export",
    },
  ],
  "name": "operator",
  "value": ";",
}
`;

exports[`programs > script > variable export as 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "operator",
      "value": "exportAs",
    },
  ],
  "name": "operator",
  "value": ";",
}
`;

exports[`programs > script > variable use 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "operator",
      "value": "use",
    },
  ],
  "name": "operator",
  "value": ";",
}
`;

exports[`programs > script > variable use with 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "operator",
      "value": ":=",
    },
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "operator",
      "value": "useWith",
    },
  ],
  "name": "operator",
  "value": ";",
}
`;
